# detective

./: .gitignore  README.md
centernet/: CMakeLists.txt  README.md
centernet/assets/: centernet-r18.param
centernet/export/: export.py
centernet/src/: centernet.cpp
faster-rcnn/: CMakeLists.txt  README.md
faster-rcnn/assets/: rcnn.param  rpn.param
faster-rcnn/export/: export.py
faster-rcnn/src/: faster_rcnn.cpp
ppyoloe-plus/: CMakeLists.txt  README.md
ppyoloe-plus/assets/: ppyoloe-plus-small.param
ppyoloe-plus/export/: export.py
ppyoloe-plus/src/: ppyoloe.cpp
rtmdet/: CMakeLists.txt  README.md
rtmdet-rotate/: CMakeLists.txt  README.md
rtmdet-rotate/assets/: rtmdet-r-tiny.param
rtmdet-rotate/export/: export.py
rtmdet-rotate/src/: box_iou_rotated_utils.h  rtmdet_rotate.cpp
rtmdet/assets/: rtmdet-tiny.param
rtmdet/export/: export.py
rtmdet/src/: rtmdet.cpp
yolov8/: CMakeLists.txt  README.md
yolov8/assets/: yolov8-nano.param
yolov8/export/: export.py
yolov8/src/: yolov8.cpp
yolox/: CMakeLists.txt  README.md
yolox-pose/: CMakeLists.txt  README.md
yolox-pose/assets/: yolox-pose-tiny.param
yolox-pose/export/: export.py
yolox-pose/src/: yoloxpose.cpp
yolox/assets/: yolox-tiny.param
yolox/export/: export.py
yolox/src/: yolox.cpp
